@@ -1,9 +1,16 @@
 apply plugin: 'java'
 
 sourceSets.main.java.srcDirs = ["src"]
+sourceSets.main.resources.srcDirs = ["src/main/resources"]
 tasks.withType(JavaCompile) {
 	// 这里是为了刷新编译器参数
 //	options.compilerArgs += '-Aa' + (int) (Math.random() * 100000)
+	options.compilerArgs += ["--add-exports", "jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED"]
+	options.compilerArgs += ["--add-exports", "jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED"]
+	options.compilerArgs += ["--add-exports", "jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED"]
+	options.compilerArgs += ["--add-exports", "jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED"]
+	options.compilerArgs += ["--add-exports", "jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED"]
+	options.compilerArgs += ["--add-exports", "jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED"]
 }
 
 dependencies {
